# friend-lite

./: .env.template  .gitignore  CLAUDE.md  Makefile  README-K8S.md  README.md  config.env.template  config_manager.py  install.sh  quickstart.md  services.py  setup-requirements.txt  setup_utils.py  start.sh  status.py  status.sh  wizard.py
.github/workflows/: README.md  advanced-docker-compose-build.yml  full-tests-with-api.yml  integration-tests.yml  pr-tests-with-api.yml  robot-tests.yml  speaker-recognition-tests.yml
Docs/: audio-pipeline-architecture.md  getting-started.md  init-system.md  overview.md  ssl-certificates.md
app/: README.md
app/app/: index.tsx
backends/advanced/: .dockerignore  .env.template  Dockerfile  Dockerfile.k8s  README.md  SETUP_SCRIPTS.md  cleanup.sh  docker-compose-test.yml  docker-compose.yml  init.py  pyproject.toml  run-test.sh  start-k8s.sh  start-workers.sh  start.sh  upload_files.py  worker_orchestrator.py
config/: README.md  config.yml.template  defaults.yml  plugins.yml.template
extras/asr-services/: .dockerignore  .env.template  README.md  docker-compose-test.yml  docker-compose.yml  init.py  pyproject.toml
extras/asr-services/common/: __init__.py  audio_utils.py  base_service.py  batching.py  response_models.py
extras/asr-services/providers/: __init__.py
extras/asr-services/providers/faster_whisper/: Dockerfile  __init__.py  service.py  transcriber.py
extras/asr-services/providers/nemo/: Dockerfile  __init__.py  service.py  transcriber.py
extras/asr-services/providers/qwen3_asr/: Dockerfile  Dockerfile.full  Dockerfile.vllm  service.py  streaming_bridge.py  transcriber.py
extras/asr-services/providers/transformers/: Dockerfile  __init__.py  service.py  transcriber.py
extras/asr-services/providers/vibevoice/: Dockerfile  __init__.py  service.py  transcriber.py
extras/asr-services/scripts/: convert_to_ct2.py
extras/asr-services/tests/: test_batching.py
extras/friend-lite-sdk/: LICENSE  NOTICE  README.md  pyproject.toml
extras/friend-lite-sdk/friend_lite/: __init__.py  bluetooth.py  button.py  neo1.py  transcribe.py  uuids.py
extras/havpe-relay/: README.md  docker-compose.yml  main.py
extras/langfuse/: .env.template  docker-compose.yml  init.py
extras/local-wearable-client/: .env.template  README.md  backend_sender.py  devices.yml.template  main.py  menu_app.py  requirements.txt  service.py  start.sh
extras/openmemory-mcp/: docker-compose.yml  init-cache.sh
extras/speaker-recognition/: .env.template  Dockerfile  README.md  docker-compose-test.yml  docker-compose.yml  init.py  pyproject.toml  run-test.sh
plugins/email_summarizer/: README.md  __init__.py  config.yml  email_service.py  plugin.py  setup.py  templates.py
plugins/homeassistant/: __init__.py  command_parser.py  config.yml  config.yml.backup  entity_cache.py  mcp_client.py  plugin.py
plugins/hourly_recap/: __init__.py  config.yml  plugin.py
plugins/test_button_actions/: __init__.py  config.yml  plugin.py
plugins/test_event/: __init__.py  config.yml  event_storage.py  plugin.py
tests/: .env.test  .gitignore  CONFIG_GUIDE.md  DEBUG_GUIDE.md  Dockerfile.mock-asr  Dockerfile.mock-llm  Dockerfile.mock-streaming-stt  Makefile  README.md  TESTING_GUIDELINES.md  run-custom.sh  run-no-api-tests.sh  run-robot-tests.sh  run_failed_tests.sh  setup-test-containers.sh  show_results.py  tags.md  teardown-test-containers.sh  test-requirements.txt
tests/asr/: batching_tests.robot  error_handling_tests.robot  gpu_integration_tests.robot  protocol_tests.robot  vibevoice_diarization_test.robot
tests/config/: plugins.test.yml
tests/configs/: README.md  deepgram-openai.yml  full-local.yml  mock-services.yml  mock-transcription-failure.yml  mock-vibevoice.yml  parakeet-ollama.yml  parakeet-openai.yml
tests/endpoints/: audio_upload_tests.robot  auth_tests.robot  chat_tests.robot  client_queue_tests.robot  conversation_tests.robot  health_tests.robot  memory_tests.robot  plugin_tests.robot  rq_queue_tests.robot  (+1 more)
(+268 files in other folders)
