[project]
name = "asr-services"
version = "0.2.0"
description = "Provider-based ASR services for Chronicle"
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.0.0",
  "numpy>=1.26",
  "soundfile>=0.12",
  "fastapi>=0.115.12",
  "uvicorn>=0.34.2",
  "python-multipart>=0.0.6",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
# Optional dependencies for specific use cases
local-audio = [
    "easy-audio-interfaces[local-audio]>=0.7.1",
]

wyoming = [
    "websockets>=12.0",
    "wyoming>=1.7.0",
    "easy-audio-interfaces>=0.7.1",
    "silero-vad>=5.1.2",
]

# CUDA versions for PyTorch
cu121 = [
  "torch>=2.3",
  "torchaudio>=2.3",
]

cu126 = [
  "torch>=2.3",
  "torchaudio>=2.3",
]

cu128 = [
  "torch>=2.3",
  "torchaudio>=2.3",
]

[tool.uv]
compile-bytecode = true
conflicts = [
  [
    { group = "faster-whisper" },
    { group = "transformers" },
    { group = "nemo" },
    { group = "vibevoice" },
    { group = "qwen3-asr" },
    { group = "qwen3-asr-full" },
  ],
  [
    { extra = "cu121" },
    { extra = "cu126" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
# Provider-specific dependency groups
faster-whisper = [
    "faster-whisper>=1.0.0",
    "ctranslate2>=4.0.0",
]

transformers = [
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "diffusers>=0.30.0",
    "torch>=2.3",
    "torchaudio>=2.3",
]

nemo = [
    "nemo-toolkit[asr]>=2.2.0",
    "cuda-python>=12.3",
    "numpy>=1.26,<2.0",
]

vibevoice = [
    "transformers>=4.51.0,<5.0.0",
    "accelerate>=0.30.0",
    "diffusers>=0.30.0",
    "torch>=2.3",
    "torchaudio>=2.3",
    "librosa>=0.10.0",
    "bitsandbytes>=0.43.0",
    "peft>=0.17.0",
]

qwen3-asr = [
    "httpx>=0.28.1",
    "websockets>=13.0",
    "soundfile>=0.12",
]

qwen3-asr-full = [
    "httpx>=0.28.1",
    "websockets>=13.0",
    "soundfile>=0.12",
    "qwen-asr>=0.0.6",
]

# Legacy groups (kept for backward compatibility)
parakeet = [
    "nemo-toolkit[asr]>=2.2.0",
    "cuda-python>=12.3",
    "numpy>=1.26,<2.0",
]

# Development dependencies
dev = [
    "black>=25.1.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
]

demo = [
    "fastrtc>=0.0.23",
    "gradio>=5.29.0",
    "sounddevice>=0.5.1",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common", "providers", "providers.faster_whisper", "providers.transformers", "providers.nemo", "providers.vibevoice", "providers.qwen3_asr"]
